<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Music Streamer</string>
    <string name="speaker_mode_title">AirPlay Speaker Mode</string>
    <string name="start_speaker">Start Speaker Mode</string>
    <string name="stop_speaker">Stop Speaker Mode</string>
    <string name="status_stopped">Status: Stopped</string>
    <string name="status_starting">Status: Starting…</string>
    <string name="status_running">Status: Running</string>
    <string name="hotspot_info">Hotspot: %s</string>
    <string name="password_info">Password: %s</string>
    <string name="airplay_name">AirPlay Name: %s</string>
    <string name="not_available">N/A</string>
</resources>
